@@ -958,6 +958,10 @@ Tk_CreateBinding(
     unsigned long eventMask;
     char *newStr, *oldStr;
 
+    if (!*script) {
+	/* Silently ignore empty scripts -- see SF#3006842 */
+	return 1;
+    }
     psPtr = FindSequence(interp, &bindPtr->patternTable, object, eventString,
 	    1, 1, &eventMask);
     if (psPtr == NULL) {
@@ -1019,7 +1023,7 @@ Tk_CreateBinding(
 /*
  *---------------------------------------------------------------------------
  *
- * TkCreateBindingFunction --
+ * TkCreateBindingProcedure --
  *
  *	Add a C binding to a binding table, so that future calls to
  *	Tk_BindEvent may callback the function in the binding.
